<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guidelineTopoAd" />

    <TextView
        android:id="@+id/alcoolTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/alcool"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/alcoolEditText"
        app:layout_constraintEnd_toEndOf="@+id/alcoolEditText"
        app:layout_constraintStart_toStartOf="@+id/alcoolEditText" />

    <TextView
        android:id="@+id/gasolinaTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/gasolina"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/gasEditText"
        app:layout_constraintEnd_toEndOf="@+id/gasEditText"
        app:layout_constraintStart_toStartOf="@+id/gasEditText" />

    <EditText
        android:id="@+id/alcoolEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/alcool"
        android:maxLength="5"
        android:textSize="25sp"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:background="@drawable/edit_text_pattern"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBaseInput"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCentro"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerdaAlcool"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopoInput" />

    <EditText
        android:id="@+id/gasEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/edit_text_pattern"
        android:ems="10"
        android:hint="@string/gasolina"
        android:maxLength="5"
        android:textSize="25sp"
        android:inputType="numberDecimal"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/guidelineBaseInput"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireitaInput"
        app:layout_constraintStart_toStartOf="@+id/guidelineCentro"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopoInput"/>


    <TextView
        android:id="@+id/alcoolPercentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autoSizeMaxTextSize="12sp"
        android:autoSizeMinTextSize="6sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBaseInput2"
        app:layout_constraintEnd_toEndOf="@+id/alcoolEditText"
        app:layout_constraintStart_toStartOf="@+id/alcoolEditText"
        app:layout_constraintTop_toBottomOf="@+id/alcoolEditText" />

    <TextView
        android:id="@+id/gasPercentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autoSizeMaxTextSize="12sp"
        android:autoSizeMinTextSize="6sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBaseInput2"
        app:layout_constraintEnd_toEndOf="@+id/gasEditText"
        app:layout_constraintStart_toStartOf="@+id/gasEditText"
        app:layout_constraintTop_toBottomOf="@+id/gasEditText" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopoInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopoInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBaseInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBaseInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEsquerdaAlcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineCentro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineDireitaInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineDireitaGasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopoAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopoAd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopoAd3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/reset_button_pattern"
        android:text="@string/resetButton"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopoAd2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireitaBotao"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerdaBotao"
        app:layout_constraintTop_toTopOf="@+id/guidelineBaseInput2" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEsquerdaBotao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineDireitaBotao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <TextView
        android:id="@+id/conclusionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireitaGasolina"
        app:layout_constraintStart_toEndOf="@+id/conclusionImage1"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopoAd2" />

    <TextView
        android:id="@+id/curiosityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireitaGasolina"
        app:layout_constraintStart_toEndOf="@+id/curiosityImage"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopoAd3" />

    <ImageView
        android:id="@+id/conclusionImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/conclusionText"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerdaAlcool"
        app:layout_constraintTop_toTopOf="@+id/conclusionText"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <ImageView
        android:id="@+id/curiosityImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/curiosityText"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerdaAlcool"
        app:layout_constraintTop_toTopOf="@+id/curiosityText"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <TextView
        android:id="@+id/observation1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoSizeMaxTextSize="8sp"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/obs1"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/curiosityText"
        app:layout_constraintStart_toStartOf="@+id/curiosityText"
        app:layout_constraintTop_toBottomOf="@+id/curiosityText" />

    <TextView
        android:id="@+id/observation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/obs2"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeMaxTextSize="8sp"
        android:autoSizeStepGranularity="2sp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopoAd"
        app:layout_constraintEnd_toEndOf="@+id/observation1"
        app:layout_constraintStart_toStartOf="@+id/observation1"
        app:layout_constraintTop_toBottomOf="@+id/observation1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_primary_gnome_question"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopoInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineDireitaInput" />
</android.support.constraint.ConstraintLayout>